--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ box-layout: text
 	<div class="title">
 		<h1>
 			About
-			<img class="leaf" src="{{ "images/leaf.png" | prepend: site.baseurl }}" />
+			<img class="leaf" src="{{ "/images/leaf.png" | prepend: site.baseurl }}" />
 		</h1>
 	</div>
 
