--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 ---
 layout: boxy
-box-layout: main
+box-layout: 1
 ---
 
 <div class="home-box">
 	<div class="title">
 		<h3>Ivy Council Presents</h3>
 		<h1>Impetus</h1>
-		<img class="leaf" src="{{ "images/leaf.png" | prepend: site.baseurl }}" />
+		<img class="leaf" src="{{ "/images/leaf.png" | prepend: site.baseurl }}" />
 		<h3>An Ivy League Summit</h3>
 	</div>
 	<div class="subtitle">
