--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ name: index
 		<h3>Ivy Council Presents</h3>
 		<h1>Impetus</h1>
 		<img class="leaf" src="{{ "/images/leaf.png" | prepend: site.baseurl }}" />
-		<h3>An Ivy League Summit</h3>
+		<h3>An Ivy Leadership Summit</h3>
 	</div>
 	<div class="subtitle">
 		Driving forward visions<br />for positive global change.
