--- a/sponsors.html
+++ b/sponsors.html
@@ -13,6 +13,10 @@ name: sponsors
 	</div>
   <p>Below you can find a detailed sponsorship package outline and sponsorship proposal. If you are interested in sponsoring the 2016 Ivy Leadership Summit, please feel free to reach out to us. We thank you in advance for taking the time to review our sponsorship proposal package.
   </p>
-  <img src="{{ "/images/sponsors1.png" | prepend: site.baseurl }}" />
-  <img src="{{ "/images/sponsors2.png" | prepend: site.baseurl }}" />
+  <a href="{{ "/images/sponsors1.png" | prepend: site.baseurl }}" target="_blank">
+    <img src="{{ "/images/sponsors1.png" | prepend: site.baseurl }}" />
+  </a>
+  <a href="{{ "/images/sponsors2.png" | prepend: site.baseurl }}" target="_blank">
+    <img src="{{ "/images/sponsors2.png" | prepend: site.baseurl }}" />
+  </a>
 </div>
