--- a/team.html
+++ b/team.html
@@ -16,13 +16,15 @@ name: team
 
 		<ul class="row team-list">
 			{% for member in site.data.team.board %}
-			<li class="col-md-4">
+			<li class="col-md-12">
 				<div class="picture">
-					<img src="{{ site.baseurl }}/images/pictures/{{ member.picture }}" />
+          <div style="background-image: url({{ site.baseurl }}/images/pictures/{{ member.picture }})"></div>
 				</div>
-				<div class="name">{{ member.name }}</div>
-				<div class="position">{{ member.position }}</div>
-				<div class="bio">{{ member.bio }}</div>
+        <div class="text">
+          <div class="name">{{ member.name }}</div>
+          <div class="position">{{ member.position }}</div>
+          <div class="bio">{{ member.bio }}</div>
+        </div>
 			</li>
 			{% endfor %}
 		</ul>
@@ -32,15 +34,17 @@ name: team
 
 	<section class="committee">
 		<h2>ILS Committee Members</h2>
-		<ul class="team-list">
+		<ul class="row team-list">
 			{% for member in site.data.team.committee %}
-			<li>
+			<li class="col-md-12">
 				<div class="picture">
-					<img src="{{ site.baseurl }}/images/pictures/{{ member.picture }}" />
+          <div style="background-image: url({{ site.baseurl }}/images/pictures/{{ member.picture }})"></div>
 				</div>
-				<div class="name">{{ member.name }}</div>
-				<div class="position">{{ member.position }}</div>
-				<div class="bio">{{ member.bio }}</div>
+        <div class="text">
+          <div class="name">{{ member.name }}</div>
+          <div class="position">{{ member.position }}</div>
+          <div class="bio">{{ member.bio }}</div>
+        </div>
 			</li>
 			{% endfor %}
 		</ul>
