--- a/schedule.html
+++ b/schedule.html
@@ -27,11 +27,11 @@ name: schedule
     <li>1:00 - 2:00 pm: Breakout Session One</li>
     <li>2:05 - 3:05 pm: Breakout Session Two</li>
     <li>3:15 - 4:15 pm: Networking event with Sponsors</li>
-    <li>5:00 - 7:00 pm: Ivy Banquet + Additional Keynote</li>
+    <li>5:00 - 7:00 pm: Ivy Banquet + Keynote Two</li>
   </ul>
   <label>Sunday 11/13:</label>
   <ul>
     <li>9:30 - 11:00 am: Student presentation session</li>
-    <li>11:15 am -12:30 pm: Keynote Two and closing remarks</li>
+    <li>11:15 am -12:30 pm: Keynote Three and closing remarks</li>
   </ul>
 </div>
