Update sunday schedule

--- a/schedule.html
+++ b/schedule.html
@@ -21,17 +21,18 @@ name: schedule
     <li>9:00 am: Opening ceremonies
 			<br />Opening Remarks by Dean of Yale College, Jonathan Holloway
 		</li>
-    <li>9:30 am: Keynote One</li>
-    <li>10:45 am: General panel</li>
-    <li>11:45 am - 1:00pm: Lunch</li>
-    <li>1:00 - 2:00 pm: Breakout Session One</li>
-    <li>2:05 - 3:05 pm: Breakout Session Two</li>
-    <li>3:15 - 4:15 pm: Networking event with Sponsors</li>
-    <li>5:00 - 7:00 pm: Ivy Banquet + Keynote Two</li>
+    <li>9:30am: Keynote One</li>
+    <li>10:45am: General panel</li>
+    <li>11:45am - 1:00pm: Lunch</li>
+    <li>1:00 - 2:00pm: Breakout Session One</li>
+    <li>2:05 - 3:05pm: Breakout Session Two</li>
+    <li>3:15 - 4:15pm: Networking event with Sponsors</li>
+    <li>5:00 - 7:00pm: Ivy Banquet + Keynote Two</li>
   </ul>
   <label>Sunday 11/13:</label>
   <ul>
-    <li>9:30 - 11:00 am: Student presentation session</li>
-    <li>11:15 am -12:30 pm: Keynote Three and closing remarks</li>
+    <li>9:00 - 10:00am: Workshop Session</li>
+    <li>10:10 - 11:30am: Student Presentation session</li>
+    <li>11:45am - 1:00pm: Keynote Three and Closing Remarks</li>
   </ul>
 </div>
