--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
-layout: boxy
-box-layout: text
+layout: container
+box-layout: container
 name: about
 ---
 
@@ -17,6 +17,52 @@ name: about
   <p>The inaugural Ivy Leadership Summit took place at Yale University in 2000 with the theme of "Integrity and Ethics." This will be the third time since the creation of ILS and the first time in six years that the Ivy Leadership Summit is being hosted at Yale University. Previous speakers at ILS include Steve Forbes, Chairman and CEO of Forbes Magazine; Nisrin Barwari, Iraqi Minister of Municipalities and General Works; Jeffrey Sachs, special adviser to the UN's Millennium Development; Theodore Roosevelt IV, Managing Director at Lehman Brothers and prominent environmentalist; and Dov S. Zakheim, US Undersecretary of Defense.</p>
 
   <p>This fall, the Yale Ivy Council will be hosting the 16th annual Ivy Leadership Summit on November 11-13, 2016 in New Haven, CT. This year’s theme is Impetus: Driving Forward Visions for Positive Global Change. The conference will focus on how the youth can be empowered to turn an idea into a reality and create positive global change through leadership and compassion. This Summit seeks to inspire and educate students through motivating keynote speakers, breakout sessions, and student-led conversations about the courageous first steps we can each take in executing ideas into concrete action that will positively impact the world.</p>
+
+<br />
+	<div class="title">
+		<h1>
+			Choose your track
+		</h1>
+	</div>
+
+
+  <p>Delegates will choose between one of five field “tracks” within which to participate. Each track will be a chance to explore leadership in practice for a specific field. There will be two panel/breakout sessions focusing on developing specific leadership skills in the context of that track. On Sunday morning, there will be a session in which students can present ideas, whether that idea has already been implemented or if it is simply the seed of an idea developed over the course of the conference. Presenting will be optional. Delegates will have the opportunity to share and receive feedback from field experts. Other delegates who do not wish to present will participate in dialogue—proposing suggestions, listening to advice, and giving feedback. The tracks are detailed as follows:</p>
+
+<ul>
+	<li>
+	<p>
+		<strong>Global Health and Development:</strong> Some of the world's biggest issues are in the field of public health, from dealing with infectious diseases to providing basic primary care to people living in rural areas. How can young people use their technical and leadership skills to help find solutions to these questions? This track features panelists who have started organizations to improve the world one step at a time, from eliminating preventative blindness to sending young leaders to the frontlines. They will share their expertise on how to achieve global impact through creating their own initiatives as well as those who are driving forwards ideas through existing institutions.
+	</p>
+	</li>
+
+	<li>
+	<p>
+		<strong>Technology:</strong> As Silicon Valley becomes increasingly profitable, more millennials are bringing their innovative ideas to the technology sector, sometimes without fully understanding the leadership challenges involved with a tech startup. How can young leaders best use their creative thinking and also use their technology to improve our society? These speakers have started their own organizations and will be sharing their wisdom and experience. This track focuses on making ideas into reality and sustaining an organization in the long term.
+	</p>
+	</li>
+
+	<li>
+	<p>
+		<strong>Education:</strong> Education is the key to a better future, but what might be the key to a better education? This track features innovators and disruptors within the education field, sharing their own experiences at the forefront of student movements and edtech startups. This track focuses on providing a voice to students, innovations in educational technology, and creating sustainable movements, all with a global
+	perspective.
+	</p>
+	</li>
+
+	<li>
+	<p>
+		<strong>Government and Activism:</strong> Our rich democracy provides young people with numerous ways to let their voice be heard, but creating policy can be a slow and frustrating process. Often, inspired young leaders have bold ideas but are weighted down with the nitty-gritty details. Both activist leaders and young elected officials will discuss their experience in making their voices heard by the public, often through very different methods. This track will help delegates develop skills related to creating a campaign or a movement, building connections and stepping into leadership.
+	</p>
+	</li>
+
+	<li>
+	<p>
+		<strong>General Entrepreneurship:</strong> Leadership has no boundaries; every field needs talented leaders to develop ideas and create changes. From scaling a local artistic movement into the national stage to creating novel perspectives to view the world, young leaders are needed to break old molds and build a better world. This tract will feature speakers who have created their own businesses as well as creative innovators who want to make a difference. Delegates will build leadership skills from learning of a potpourri of possible outlets for leadership activities.
+	</p>
+	</li>
+
+	<p>
+	<strong>*</strong> In addition to the track specific activities, delegates will choose workshops for a Sunday morning session. These workshops will focus on developing specific tools needed in leadership, as well as practical advice for success. Workshops are held in a more intimate environment, providing opportunities to discuss and interact with the workshop leaders. These sessions will be intersectoral, allowing delegates to hear any expert of their interest. Delegates will choose from the workshops on a first-come first-serve basis at a later date.
+	</p>
 
   <p>
     <a href="team.html">Click here to meet the Yale Ivy Council team!</a>
