--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ box-layout: main
 
 <div class="home-box">
 	<div class="title">
-		<h3>Ivy Council Presents</h3>
+    <h3><a href="http://ivycouncil.org/">Ivy Council</a> Presents</h3>
 		<h1>Impetus</h1>
 		<img class="leaf" src="{{ "/images/leaf.png" | prepend: site.baseurl }}" />
 		<h3>An Ivy Leadership Summit</h3>
