Not a federal crime.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@ box-layout: main
 	<div class="details">
 		November 11-13, 2016<br />
 		Hosted by Yale University
+    <br />
+
+    <br />
+    <strong>Applications open on September 12th</strong>
 	</div>
 	<a href="{{ "/apply.html" | prepend: site.baseurl }}" class="apply">
 		Apply
