--- a/apply.html
+++ b/apply.html
@@ -12,6 +12,6 @@ name: apply
 		</h1>
 	</div>
 
-	<p>Applications for 2016 Ivy Leadership Summit will open in Fall 2016. Check back here then for more information.</p>
+	<p>Applications for 2016 Ivy Leadership Summit will on September 12th. Check back here then for more information.</p>
 
 </div>
