--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ box-layout: main
 	</div>
 	<div class="details">
 		November 11-13, 2016<br />
-		Hosted by Yale University
+		Hosted by Yale Ivy Council
     <br />
 
     <br />
