--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@ box-layout: main
 	<div class="details">
 		November 11-13, 2016<br />
 		Hosted by Yale Ivy Council
-    <br />
-
-    <br />
-    <strong>Applications open on September 12th</strong>
 	</div>
-	<a href="{{ "/apply.html" | prepend: site.baseurl }}" class="apply">
-		Apply
+	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfE5sqpN6yMiXVcKdwjd87acoY2kpXvzBulFPiVC6KhFasMjw/viewform?c=0&w=1" class="apply">
+		Apply Now
 	</a>
 </div>
