--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ box-layout: main
 	</div>
 	<div class="details">
 		November 11-13, 2016<br />
-		Hosted by Yale Ivy Council
+    Hosted at Yale University<br />
+    <span style="font-weight: 500; color: #000">Venue: Omni Hotel</span>
 	</div>
 	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfE5sqpN6yMiXVcKdwjd87acoY2kpXvzBulFPiVC6KhFasMjw/viewform?c=0&w=1" class="apply">
 		Apply Now
