--- a/schedule.html
+++ b/schedule.html
@@ -16,6 +16,7 @@ name: schedule
     <li>8pm: Registration</li>
   </ul>
   <label>Saturday 11/12:</label>
+  <div style="font-weight: 500; margin: 3t px 0 10px;">At the Omni Hotel</div>
   <ul>
     <li>8:30 am: Breakfast</li>
     <li>9:00 am: Opening ceremonies
