--- a/speakers.html
+++ b/speakers.html
@@ -50,7 +50,7 @@ name: speakers
 
 
 	<section class="">
-		<h2>Technology break-out</h2>
+		<h2>Technology break-out session</h2>
 		<h3></h3>
 
 		<ul class="row speakers-list">
@@ -69,7 +69,7 @@ name: speakers
 
 
 	<section class="">
-		<h2>Education break-out</h2>
+		<h2>Education break-out session</h2>
 		<h3></h3>
 
 		<ul class="row speakers-list">
@@ -87,7 +87,7 @@ name: speakers
 	</section>
 
 	<section class="">
-		<h2>Entrepreneurship break-out</h2>
+		<h2>Entrepreneurship break-out session</h2>
 		<h3></h3>
 
 		<ul class="row speakers-list">
