--- a/speakers.html
+++ b/speakers.html
@@ -9,6 +9,7 @@ name: speakers
 			Meet the speakers
 			<img class="leaf" src="{{ "/images/leaf.png" | prepend: site.baseurl }}" />
 		</h1>
+		<h2>More Speakers are in the process of being invited. This page will be updated periodically.</h2>
 	</div>
 
 	<section class="">
