--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ box-layout: main
     Hosted at Yale University<br />
     <span style="font-weight: 500; color: #000">Venue: Omni Hotel</span>
 	</div>
-	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfE5sqpN6yMiXVcKdwjd87acoY2kpXvzBulFPiVC6KhFasMjw/viewform?c=0&w=1" class="apply">
-		Apply Now
+	<a href="https://docs.google.com/forms/d/e/1FAIpQLSfE5sqpN6yMiXVcKdwjd87acoY2kpXvzBulFPiVC6KhFasMjw/viewform?c=0&w=1" class="apply disabled">
+		Applications Closed
 	</a>
 </div>
