Updated schedule to be accurate

--- a/schedule.html
+++ b/schedule.html
@@ -13,27 +13,28 @@ name: schedule
 	</div>
   <label>Friday 11/11:</label>
   <ul>
-    <li>8pm: Registration</li>
+    <li>6pm: Registration</li>
   </ul>
   <label>Saturday 11/12:</label>
   <div style="font-weight: 500; margin: 3t px 0 10px;">At the Omni Hotel</div>
   <ul>
     <li>8:30 am: Breakfast</li>
-    <li>9:00 am: Opening ceremonies
+    <li>9:15 am: Opening ceremonies
 			<br />Opening Remarks by Dean of Yale College, Jonathan Holloway
 		</li>
-    <li>9:30am: Keynote One</li>
-    <li>10:45am: General panel</li>
-    <li>11:45am - 1:00pm: Lunch</li>
+    <li>9:40 - 10:25am: Keynote One</li>
+    <li>10:35 - 11:45am: Plenary panel</li>
+    <li>11:45 - 1:00pm: Lunch</li>
     <li>1:00 - 2:00pm: Breakout Session One</li>
-    <li>2:05 - 3:05pm: Breakout Session Two</li>
-    <li>3:15 - 4:15pm: Networking event with Sponsors</li>
+    <li>2:00 - 2:30pm: Breakout/Snack Session</li>
+    <li>2:30 - 3:30pm: Breakout Session Two</li>
+    <li>3:30 - 4:15pm: Speaker Office Hours and Keynotes</li>
     <li>5:00 - 7:00pm: Ivy Banquet + Keynote Two</li>
   </ul>
   <label>Sunday 11/13:</label>
   <ul>
-    <li>9:00 - 10:00am: Workshop Session</li>
-    <li>10:10 - 11:30am: Student Presentation session</li>
+    <li>9:00 - 10:20am: Student Presentation Session</li>
+    <li>10:30 - 11:30am: Expert Workshop session</li>
     <li>11:45am - 1:00pm: Keynote Three and Closing Remarks</li>
   </ul>
 </div>
