Made the schedule less kiddy

--- a/schedule.html
+++ b/schedule.html
@@ -26,9 +26,9 @@ name: schedule
     <li>10:35 - 11:45am: Plenary panel</li>
     <li>11:45 - 1:00pm: Lunch</li>
     <li>1:00 - 2:00pm: Breakout Session One</li>
-    <li>2:00 - 2:30pm: Breakout/Snack Session</li>
+    <li>2:00 - 2:30pm: Break </li>
     <li>2:30 - 3:30pm: Breakout Session Two</li>
-    <li>3:30 - 4:15pm: Speaker Office Hours and Keynotes</li>
+    <li>3:30 - 4:15pm: Speaker Office Hours</li>
     <li>5:00 - 7:00pm: Ivy Banquet + Keynote Two</li>
   </ul>
   <label>Sunday 11/13:</label>
