--- a/sponsors.html
+++ b/sponsors.html
@@ -4,24 +4,37 @@ box-layout: text
 name: sponsors
 ---
 
-<div class="sdf-box">
+<div class="sdf-box page-sponsors">
 	<div class="title">
 		<h1>
 			Sponsors
 			<img class="leaf" src="{{ "/images/leaf.png" | prepend: site.baseurl }}" />
 		</h1>
 	</div>
-  <p>Below you can find a detailed sponsorship package outline and sponsorship proposal. If you are interested in sponsoring the 2016 Ivy Leadership Summit, please feel free to reach out to us. We thank you in advance for taking the time to review our sponsorship proposal package.
+  <p>
+    Here are the organizations and fellowships that back our event.
   </p>
-  <a href="{{ "/images/sponsors1.png" | prepend: site.baseurl }}" target="_blank">
-    <div class="thumbnail">
-      <img src="{{ "/images/sponsors1.png" | prepend: site.baseurl }}" />
+
+  <ul>
+    <li>Bank of America Merrill Lynch</li>
+    <li>Dean’s and President’s Discretionary Fund (Yale College Dean’s Office)</li>
+    <li>Klein Zelman Rothermal Jacobs & Schess LLP</li>
+    <li>Office of International Students and Scholars (OISS)</li>
+    <li>Poynter Fellowship in Journalism</li>
+    <li>Traphagen Alumni Speaker Series (Yale Office of Student Affairs)</li>
+  </ul>
+
+  <!--
+  <a href="{{ "/images/sponsors/boa.jpg" | prepend: site.baseurl }}" target="_blank">
+    <div class="sponsor">
+      <img src="{{ "/images/sponsors/boa.jpg" | prepend: site.baseurl }}" />
     </div>
   </a>
   </a>
-  <a href="{{ "/images/sponsors2.png" | prepend: site.baseurl }}" target="_blank">
-    <div class="thumbnail">
-      <img src="{{ "/images/sponsors2.png" | prepend: site.baseurl }}" />
+  <a href="{{ "/images/sponsors/oiss.png" | prepend: site.baseurl }}" target="_blank">
+    <div class="sponsor">
+      <img src="{{ "/images/sponsors/oiss.png" | prepend: site.baseurl }}" />
     </div>
   </a>
+  -->
 </div>
